improve separation of concerns

--- a/cls/Forgery/Agent.cls
+++ b/cls/Forgery/Agent.cls
@@ -1,51 +1,29 @@
-Class Forgery.Agent Extends Forgery.Agent.Core
+Class Forgery.Agent Extends (%RegisteredObject, Forgery.Internal.BaseAgent)
 {
 
-Method Post(settings As %DynamicObject, response As %Stream.Object, outputToDevice As %Boolean = 0) As %Status
+Method Post(resource As %String, data As %DynamicAbstractObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  set settings.method = "POST"
-  return ..Request(settings, .response, outputToDevice)
+  return ..DoRequest(resource, ..#HTTPPOSTMETHOD, data, overrides)
 }
 
-Method Get(settings As %DynamicObject = "", response As %Stream.Object, outputToDevice As %Boolean = 0) As %Status
+Method Get(resource As %String, queryParams As %DynamicObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  if '$isobject(settings) {
-    set url = settings
-    set settings = { "url": (url) }
-  }
-  set settings.method = "GET"
-  return ..Request(settings, .response, outputToDevice)
+  return ..DoRequest(resource, ..#HTTPGETMETHOD, queryParams, overrides)
 }
 
-Method Put(settings As %DynamicObject, response As %Stream.Object, outputToDevice As %Boolean = 0)
+Method Put(resource As %String, data As %DynamicAbstractObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  set settings.method = "PUT"
-  return ..Request(settings, .response, outputToDevice)
+  return ..DoRequest(resource, ..#HTTPPUTMETHOD, data, overrides)
 }
 
-Method Delete(settings As %DynamicObject, response As %Stream.Object, outputToDevice As %Boolean = 0)
+Method Delete(resource As %String, queryParams As %DynamicObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  set settings.method = "DELETE"
-  return ..Request(settings, .response, outputToDevice)
+  return ..DoRequest(resource, ..#HTTPDELETEMETHOD, queryParams, overrides)
 }
 
-Method Head(settings As %DynamicObject, response As %Stream.Object, outputToDevice As %Boolean = 0)
+Method Head(resource As %String, queryParams As %DynamicObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  set settings.method = "HEAD"
-  set settings.data = {}
-  return ..Request(settings, .response, outputToDevice)
-}
-
-Method Patch(settings As %DynamicObject, response As %Stream.Object, outputToDevice As %Boolean = 0)
-{
-  set settings.method = "PATCH"
-  return ..Request(settings, .response, outputToDevice)
-}
-
-Method Options(settings As %DynamicObject, response As %Stream.Object, outputToDevice As %Boolean = 0)
-{
-  set settings.method = "OPTIONS"
-  return ..Request(settings, .response, outputToDevice)
+  return ..DoRequest(resource, ..#HTTPHEADMETHOD, queryParams, overrides)
 }
 
 }
