--- a/cls/Forgery/Internal/BaseAgent.cls
+++ b/cls/Forgery/Internal/BaseAgent.cls
@@ -1,4 +1,4 @@
-Class Forgery.Internal.BaseAgent Extends (%RegisteredObject, Forgery.IAgent)
+Class Forgery.Internal.BaseAgent Extends Forgery.IAgent
 {
 
 Parameter HTTPPOSTMETHOD = "POST";
@@ -27,27 +27,32 @@ Method %OnNew(configuration As Forgery.Configuration, requestDispatcherFactory A
 
 Method Post(resource As %String, data As %DynamicAbstractObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  return ..DoRequest(resource, ..#HTTPPOSTMETHOD, data, overrides)
+  $$$ThrowOnError($$$ERROR($$$MethodNotImplemented, "Post"))
 }
 
-Method Get(resource As %String, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
+Method Get(resource As %String, queryParams As %DynamicObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  return ..DoRequest(resource, ..#HTTPGETMETHOD,, overrides)
+  $$$ThrowOnError($$$ERROR($$$MethodNotImplemented, "Get"))
 }
 
 Method Put(resource As %String, data As %DynamicAbstractObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  return ..DoRequest(resource, ..#HTTPPUTMETHOD, data, overrides)
+  $$$ThrowOnError($$$ERROR($$$MethodNotImplemented, "Put"))
 }
 
-Method Delete(resource As %String, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
+Method Delete(resource As %String, queryParams As %DynamicObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  return ..DoRequest(resource, ..#HTTPDELETEMETHOD, overrides)
+  $$$ThrowOnError($$$ERROR($$$MethodNotImplemented, "Delete"))
 }
 
-Method Head(resource As %String, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
+Method Head(resource As %String, queryParams As %DynamicObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  return ..DoRequest(resource, ..#HTTPHEADMETHOD, overrides)
+  $$$ThrowOnError($$$ERROR($$$MethodNotImplemented, "Head"))
+}
+
+Method Patch(resource As %String, data As %DynamicAbstractObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF})
+{
+  $$$ThrowOnError($$$ERROR($$$MethodNotImplemented, "Patch"))
 }
 
 Method DoRequest(resource As %String, httpMethod As %String, data As %DynamicAbstractObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status [ Private ]
