fix fake router

--- a/tests/_setup/fakes/FakeRouter.cls
+++ b/tests/_setup/fakes/FakeRouter.cls
@@ -8,9 +8,10 @@ XData UrlMap
 </Routes>
 }
 
-ClassMethod SayHello(message As %String)
+ClassMethod SayHello()
 {
-  write { "message": (message) }.%ToJSON()
+  write { "message": (%request.Get("message")) }.%ToJSON()
+  return $$$OK
 }
 
 }
