--- a/cls/Forgery/IDispatchHandler.cls
+++ b/cls/Forgery/IDispatchHandler.cls
@@ -1,9 +1,14 @@
 Class Forgery.IDispatchHandler [ Abstract ]
 {
 
-Method Handle(resource As %String, httpMethod As %String, restDispatchClass As %String) As %Status [ Abstract ]
+Method OnDispatch(resource As %String, httpMethod As %String, restDispatchClass As %String, context As Forgery.CSP.Context) As %Status [ Abstract ]
 {
   $$$ThrowStatus($$$ERROR($$$MethodNotImplemented, "Handle"))
+}
+
+Method OnDispose() As %Status
+{
+ $$$ThrowStatus($$$ERROR($$$MethodNotImplemented, "AfterHandle"))
 }
 
 }
