modify dispatcher to depend on config

--- a/cls/Forgery/Internal/RequestDispatcher.cls
+++ b/cls/Forgery/Internal/RequestDispatcher.cls
@@ -5,8 +5,6 @@ Property Configuration As Forgery.Configuration [ Private ];
 
 Property InitialNamespace As %String [ InitialExpression = {$namespace}, Private ];
 
-Property DispatchHandler As Forgery.IDispatchHandler [ Private ];
-
 Property ContextFactory As Forgery.CSP.ContextFactory [ Private ];
 
 Property LastContext As Forgery.CSP.Context [ Private ];
@@ -19,10 +17,10 @@ Property ConfigurationMerger As Forgery.Internal.ConfigurationMerger [ Private ]
 
 Property CookieJar As Forgery.Internal.CookieJar [ Private ];
 
-Method %OnNew(configuration As Forgery.Configuration, resolver As Forgery.Internal.WebApplicationResolver, handler As Forgery.IDispatchHandler, interceptor As Forgery.IO.DeviceInterceptor, jar As Forgery.Internal.CookieJar, cspContextFactory As Forgery.CSP.ContextFactory, configurationMerger As Forgery.Internal.ConfigurationMerger) As %Status
+Method %OnNew(configuration As Forgery.Configuration, resolver As Forgery.Internal.WebApplicationResolver, interceptor As Forgery.IO.DeviceInterceptor, jar As Forgery.Internal.CookieJar, cspContextFactory As Forgery.CSP.ContextFactory, configurationMerger As Forgery.Internal.ConfigurationMerger) As %Status
 {
+  set ..Configuration = configuration
   set ..WebApplicationResolver = resolver
-  set ..DispatchHandler = handler
   set ..DeviceInterceptor = interceptor
   set ..CookieJar = jar
   set ..ContextFactory = cspContextFactory
@@ -33,28 +31,30 @@ Method %OnNew(configuration As Forgery.Configuration, resolver As Forgery.Intern
 
 Method Dispatch(httpMethod As %String, resource As %String, data As %DynamicAbstractObject = {$$$NULLOREF}, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
+  #define SafeOverrides $select($isobject(overrides) : overrides, 1: {})
+  
   $$$QuitOnError(..WebApplicationResolver.Resolve(resource, .appInfo))
 
-  set safeOverrides = $select($isobject(overrides) : overrides, 1: {})
   set mergedOverrides = ..ConfigurationMerger.Merge(
-    safeOverrides,
+    $$$SafeOverrides,
     { "headers": (..Configuration.GetRequestDefaultHeaders()) }, 
     { "cookies": (..Configuration.GetRequestDefaultCookies()) }
   )
   set ..LastContext = ..ContextFactory.Create(appInfo.AppUrl, resource, httpMethod, data, mergedOverrides)
 
   set status = $$$OK
+  set dispatchHandler = ..Configuration.GetDispatchHandler()
 
   try {
     do ..LastContext.Request.PickFromJar(..CookieJar)
     do ..DeviceInterceptor.StartInterception()
-    $$$ThrowOnError(..DispatchHandler.OnDispatch(resource, httpMethod, appInfo.DispatchClass, ..LastContext))
+    $$$ThrowOnError(dispatchHandler.OnDispatch(resource, httpMethod, appInfo.DispatchClass, ..LastContext))
     do ..CookieJar.PutCookiesFromResponse(..LastContext.Response)
   } catch ex {
     set status = ex.AsStatus()
   }
 
-  $$$QuitOnError(..DispatchHandler.OnDispose())
+  $$$QuitOnError(dispatchHandler.OnDispose())
   
   do ..DeviceInterceptor.EndInterception()
 
