--- a/cls/Forgery/Internal/WebApplicationResolver.cls
+++ b/cls/Forgery/Internal/WebApplicationResolver.cls
@@ -36,7 +36,7 @@ Method Resolve(url As %String, Output info As %DynamicObject = "") As %Status
   set prefixedResource = baseUrl_$select($extract(url) '= "/" : "/"_url, 1: url)
 
   // Reverts the ordering to match longer names first.
-  set rows = ##class(%SQL.Statement).%ExecDirect(, "SELECT TOP 1 Name, DispatchClass, Path FROM SECURITY.APPLICATIONS WHERE ? %STARTSWITH Name ORDER BY LEN(Name) DESC", prefixedResource)
+  set rows = ##class(%SQL.Statement).%ExecDirect(, "SELECT TOP 1 Name, DispatchClass, Path FROM SECURITY.APPLICATIONS WHERE ? %STARTSWITH Name AND DispatchClass IS NOT NULL ORDER BY LEN(Name) DESC", prefixedResource)
   if rows.%Next() {
     set info.Name = rows.%Get("Name")
     set info.DispatchClass = rows.%Get("DispatchClass")
