--- a/cls/Forgery/Internal/CookieJar.cls
+++ b/cls/Forgery/Internal/CookieJar.cls
@@ -3,6 +3,7 @@ Class Forgery.Internal.CookieJar Extends %RegisteredObject
 
 Property Cookies As %String [ MultiDimensional ];
 
+/// testing
 Method PutCookiesFromResponse(response As %CSP.Response) As %Status
 {
   set index = ""
