add interceptor as arg and ready to use dispatcher

--- a/cls/Forgery/IDispatchHandler.cls
+++ b/cls/Forgery/IDispatchHandler.cls
@@ -1,14 +1,14 @@
 Class Forgery.IDispatchHandler [ Abstract ]
 {
 
-Method OnDispatch(resource As %String, httpMethod As %String, restDispatchClass As %String, context As Forgery.CSP.Context) As %Status [ Abstract ]
+Method OnDispatch(resource As %String, httpMethod As %String, restDispatchClass As %String, context As Forgery.CSP.Context, interceptor As Forgery.IO.DeviceInterceptor) As %Status [ Abstract ]
 {
-  $$$ThrowStatus($$$ERROR($$$MethodNotImplemented, "Handle"))
+  $$$ThrowStatus($$$ERROR($$$MethodNotImplemented, "OnDispatch"))
 }
 
 Method OnDispose() As %Status
 {
- $$$ThrowStatus($$$ERROR($$$MethodNotImplemented, "AfterHandle"))
+ $$$ThrowStatus($$$ERROR($$$MethodNotImplemented, "OnDispose"))
 }
 
 }
